deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs.app-deployment
  labels:
    app: nodejs.app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs.app
  template:
    metadata:
      labels:
        app: nodejs.app
    spec:
      containers:
      - name: dev-container
        image: katarnak/namo-app:latest
        ports: 
        - containerPort: 8000
