service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node.app-service
spec:
  selector:
    app: nodejs.app
  ports:
    - port: 8000
      targetPort: 3000
  type: LoadBalancer
